# search_engine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.h  README.md  config.json  main.cpp  requests.json  tests.cpp
config/: config.json  requests.json
include/: ConverterJSON.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt
src/: CMakeLists.txt  ConverterJSON.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndex.cpp  tests.cpp
